--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Agora</title>
+	<title>Elm App Boilerplate</title>
 	<link type="text/css" rel="stylesheet" href="styles/app.css">
 	<script type="text/javascript" src="scripts/elm.js"></script>
 </head>
