--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>Elm App Boilerplate</title>
-	<link type="text/css" rel="stylesheet" href="styles/app.css">
-	<script type="text/javascript" src="scripts/elm.js"></script>
+	<link type="text/css" rel="stylesheet" href="semantic.css">
+	<script type="text/javascript" src="jquery.slim.min.js"></script>
+	<script type="text/javascript" src="semantic.js"></script>
+	<script type="text/javascript" src="elm.js"></script>
 </head>
 <body>
 	<script type="text/javascript">Elm.fullscreen(Elm.Main)</script>
