Use jquery.min.js by default
`jquery.slim.min.js` does not contain some featured required by
Semantic UI, eg the `stop` function.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Elm App Boilerplate</title>
 	<link type="text/css" rel="stylesheet" href="semantic.css">
-	<script type="text/javascript" src="jquery.slim.min.js"></script>
+	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="semantic.js"></script>
 	<script type="text/javascript" src="elm.js"></script>
 </head>
