Init and refresh the accordion automatically

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
 	<script type="text/javascript">Elm.fullscreen(Elm.Main)</script>
+	<script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
